feat: add static page

--- a/src/style.css
+++ b/src/style.css
@@ -1,79 +1,26 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  border: none;
+  background-color: transparent;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+:root {
+  /* unocss */
+  --my-color-background: #ffffff;
+  --my-color-primary: #1b5aff;
+  --my-color-on-primary: #fff;
+  --my-color-surface: #f9fbf9;
+  --my-color-divider: #d0cece;
+  --my-color-success: #67c23a;
+  --my-color-error: #ff1212;
+  --my-color-text: #000000;
+  --my-color-secondary-text: #a5a5a5;
+  --my-color-disabled: #75acff;
+  --my-color-on-disabled: #ffffff;
+  --my-color-input-bg: #f2faff;
+  --my-color-input-border: #1b5aff;
+  --my-color-stepper-inactive: #dde0e7;
+  --my-color-stepper-bg: #85a7ff;
+  --my-color-stepper-border: #2a4cfe;
 }
